--- a/src/main/resources/templates/editar_Perfil_Usuario.html
+++ b/src/main/resources/templates/editar_Perfil_Usuario.html
@@ -128,7 +128,8 @@
     </section>
 
 
-    
+    <script th:replace="layaut/layaut :: script_modal_persona"></script>
+
     <!-- Jquery Core Js -->
     <script src="../../../../plugins/jquery/jquery.min.js"></script>
 
