--- a/src/main/resources/templates/informe_tecnico.html
+++ b/src/main/resources/templates/informe_tecnico.html
@@ -132,7 +132,8 @@
           
         </div>
     </section>
-    
+    <script th:replace="layaut/layaut :: script_modal_persona"></script>
+
     <!-- Jquery Core Js -->
     <script src="../../../../plugins/jquery/jquery.min.js"></script>
 
