--- a/src/main/resources/templates/lista_Almacen.html
+++ b/src/main/resources/templates/lista_Almacen.html
@@ -104,9 +104,12 @@
                     </div>
                 </div>
             <!-- #END# Exportable Table -->
+            <div th:replace="layaut/layaut :: modal_color"></div>
+
         </section>
 
-    
+    <script th:replace="layaut/layaut :: script_modal_persona"></script>
+
     <!-- Jquery Core Js -->
     <script src="../../../../plugins/jquery/jquery.min.js"></script>
 
