--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -624,11 +624,14 @@
                     </div>
                 </div>
             </th:block>
+            
+            <div th:replace="layaut/layaut :: modal_color"></div>
         </div>
         <!-- #END# Exportable Table -->
     </section>
        
     
+    <script th:replace="layaut/layaut :: script_modal_persona"></script>
     <!-- Jquery Core Js -->
     <script src="../../../../plugins/jquery/jquery.min.js"></script>
 
