--- a/src/main/resources/templates/Edit_Persona.html
+++ b/src/main/resources/templates/Edit_Persona.html
@@ -154,6 +154,8 @@
         </div>
     </section>
  
+    <script th:replace="layaut/layaut :: script_modal_persona"></script>
+
     <!-- Jquery Core Js -->
     <script src="../../../../plugins/jquery/jquery.min.js"></script>
 
