--- a/src/main/resources/templates/add_Cargo_Unidad.html
+++ b/src/main/resources/templates/add_Cargo_Unidad.html
@@ -100,10 +100,13 @@
             </div>
 
         </div>
+        <div th:replace="layaut/layaut :: modal_color"></div>
+
     </section>
 
 
-    
+    <script th:replace="layaut/layaut :: script_modal_persona"></script>
+
     <!-- Jquery Core Js -->
     <script src="../../../../plugins/jquery/jquery.min.js"></script>
 
