--- a/src/main/resources/templates/editar_servicio.html
+++ b/src/main/resources/templates/editar_servicio.html
@@ -73,6 +73,8 @@
             
     </section>
 
+    <script th:replace="layaut/layaut :: script_modal_persona"></script>
+
     <!-- Jquery Core Js -->
     <script src="../../../../plugins/jquery/jquery.min.js"></script>
 
