--- a/src/main/resources/templates/informe_preventivo.html
+++ b/src/main/resources/templates/informe_preventivo.html
@@ -112,6 +112,8 @@
         </div>
     </section>
     
+    <script th:replace="layaut/layaut :: script_modal_persona"></script>
+
     <!-- Jquery Core Js -->
     <script src="../../../../plugins/jquery/jquery.min.js"></script>
 
