--- a/src/main/resources/templates/add_Persona.html
+++ b/src/main/resources/templates/add_Persona.html
@@ -49,11 +49,13 @@
                     AGREGAR PERSONA
                 </h2>
             </div>
+            <div th:replace="layaut/layaut :: alert2"></div>
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="card">
                         <div class="body">
                             <div th:replace="layaut/layaut :: alert"></div>
+                            
                             <div class="alert alert-danger text-center">
                                 <strong>DATOS PERSONA</strong>
                             </div>
