--- a/src/main/resources/templates/INFORMES/ficha_baja.html
+++ b/src/main/resources/templates/INFORMES/ficha_baja.html
@@ -115,35 +115,36 @@
                     <table class="table table-bordered border-white" id="tabla1">
                         <tbody>
                            
-                            <tr>
+                            <tr style="vertical-align: middle;">
                                 <th colspan="2" style="text-align: end;" height="75px" width="5%">A: </th>
                                 <td colspan="3" class="text-md-start" th:utext="${per_dirig}"> </td>
                             </tr>
-                            <tr>
+                            <tr style="vertical-align: middle;">
                                 <th colspan="2" style="text-align: end;" height="75px" scope="row">VIA: </th>
-                                <td colspan="3" class="text-md-start" width="100%">ING. LUIS ENRIQUE VILLCA MAMANI <br><b>JEFE a.i UNIDAD DE
+                                <td colspan="2" class="text-md-start" width="70%">ING. LUIS ENRIQUE VILLCA MAMANI <br><b>JEFE a.i UNIDAD DE
                                         SISTEMAS DE INFORMACIÓN Y
                                         COMUNICACIÓN</b> </td>
+                                <td th:if="${baja.QR_baja != null}" colspan="3" class="text-center" width="100%" ><img th:src="@{'/uploads_bajas/'+${baja.QR_baja}+'.png'}" width="60px" height="65px"> </td>
                             </tr>
-                            <tr>
-                                <th colspan="2" style="text-align: end;" height="30px" scope="row">DE: </th>
-                                <td colspan="3" class="text-md-start" th:utext="${user_tec}"></td>
+                            <tr style="vertical-align: middle;">
+                                <th colspan="2" style="text-align: end;" height="75px" scope="row">DE: </th>
+                                <td colspan="4" class="text-md-start" th:utext="${user_tec}"></td>
                             </tr>
                             <tr>
                                 <th colspan="2" scope="row" style="text-align: end;" width="5%" th:text="${'FECHA: '}"></th>
-                                <td colspan="3" style="text-transform:uppercase" width="20%" th:text="${#dates.format(baja.fecha_baja, 'dd MMMM yyyy')}"></td>
+                                <td colspan="4" style="text-transform:uppercase" width="20%" th:text="${#dates.format(baja.fecha_baja, 'dd MMMM yyyy')}"></td>
                             </tr>
                             <tr>
                                 <th colspan="2" scope="row" style="text-align: end;" width="5%" th:text="${'REF.'}"></th>
-                                <td style="text-transform:uppercase" width="80%" th:utext="${'<b>'+baja.ref_baja+'</b>'}"></td>
+                                <td colspan="4" style="text-transform:uppercase" width="80%" th:utext="${'<b>'+baja.ref_baja+'</b>'}"></td>
                                 <!-- <th colspan="3" style="text-transform:uppercase" width="20%" th:text="${#dates.format(baja.fecha_baja, 'dd MMMM yyyy')}"></th> -->
                             </tr>
                             
                             <tr>
-                                <td colspan="4" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() == 1}"
+                                <td colspan="5" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() == 1}"
                                     th:utext="${'Tengo a bien dirigirme a su persona para saludarlo (A) cordialmente y a la vez hacerle llegar el Informe Técnico del Equipo solicitado en CITE: <b>'+baja.cite+'</b>'+', bajo los argumentos técnicos que a continuación se detalla:'}">
                                 </td>
-                                <td colspan="4" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() > 1}"
+                                <td colspan="5" style="text-align: justify; text-transform: uppercase;" th:if="${baja.detalleBajas.size() > 1}"
                                     th:utext="${'Tengo a bien dirigirme a su persona para saludarlo (A) cordialmente y a la vez hacerle llegar el Informe Técnico del Los Equipos solicitado en CITE: <b>'+baja.cite+'</b>'+', bajo los argumentos técnicos que a continuación se detalla:'}">
                                 </td>
                             </tr>
