--- a/src/main/resources/templates/layaut/layaut.html
+++ b/src/main/resources/templates/layaut/layaut.html
@@ -53,6 +53,7 @@
 
    <!-- Custom Css -->
    <link href="../../../../css/style.css" rel="stylesheet">
+   <link href="../../../../css/sweetalert2.min.css" rel="stylesheet">
 
    <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
    <link href="../../../../css/themes/all-themes.css" rel="stylesheet" />
